@@ -3,3 +3,4 @@ test status data/cmd-status ANYUSER
 test nonexistant data/cmd-nonexistant ANYUSER
 test noauth data/cmd-hello data/acl-nonexistant
 test streaming data/cmd-streaming ANYUSER
+test env data/cmd-env ANYUSER
